--- a/generateur.html
+++ b/generateur.html
@@ -284,7 +284,7 @@ function genererFiche() {
 '<meta charset="UTF-8">\n' +
 '<meta name="viewport" content="width=device-width, initial-scale=1.0">\n' +
 '<title>' + titre + '</title>\n' +
-'<link rel="stylesheet" href="styles.css">\n'
+'<link rel="stylesheet" href="styles.css">\n' +
 '</head>\n' +
 '<body>\n' +
 '<div class="container">\n' +
