correction generation articles

--- a/index.html
+++ b/index.html
@@ -773,7 +773,8 @@
         "Den Haag": { lat: 52.070, lng: 4.300 },
         "Amsterdam": { lat: 52.370, lng: 4.895 },
     "Leeuwarden": { lat: 53.201, lng: 5.799 },
-    "Emmen": { lat: 52.785, lng: 6.897 }
+    "Emmen": { lat: 52.785, lng: 6.897 },
+    "Middelburg": { lat: 51.498, lng: 3.610 }
         // Ajoute d'autres villes ici si besoin
     };
 
