correction generation articles

--- a/Middelburg_2026-01-11old.html
+++ b/Middelburg_2026-01-11old.html
@@ -69,7 +69,7 @@ const encouragements = [
   "Geweldig! 🏆",
   "Meesterlijk! 👏"
 ];
-let questions = [{"question":"Que signifie \"het incident\" ?","reponse":"incident"},{"question":"Que signifie \"de zondag\" ?","reponse":"dimanche"},{"question":"Que signifie \"het P2000-netwerk\" ?","reponse":"réseau d'alerte P2000"},{"question":"Que signifie \"de traumaheli\" ?","reponse":"hélicoptère médical d'urgence"},{"question":"Que signifie \"de ambulance\" ?","reponse":"ambulance"},{"question":"Que signifie \"de veiligheidsregio\" ?","reponse":"région de sécurité"}];
+let questions = [{"question":"Que signifie \"de ambulance\" ?","reponse":"ambulance"},{"question":"Que signifie \"de traumaheli\" ?","reponse":"hélicoptère médical d'urgence"},{"question":"Que signifie \"het incident\" ?","reponse":"incident"},{"question":"Que signifie \"het P2000-netwerk\" ?","reponse":"réseau d'alerte P2000"},{"question":"Que signifie \"de zondag\" ?","reponse":"dimanche"},{"question":"Que signifie \"de veiligheidsregio\" ?","reponse":"région de sécurité"}];
 let indexQ = 0;
 function getRandomEncouragement() {
   return encouragements[Math.floor(Math.random() * encouragements.length)];
