Ajout exercice irrgulier complet

--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
                     <a href="revision_present.html" class="dropdown-item">Révision présent</a>
                     <a href="revision_heures.html" class="dropdown-item">Révision heures</a>
                     <a href="revision_vocabulaire.html" class="dropdown-item">Révision vocabulaire</a>
+                    <a href="revision_irregulier_verbes.html" class="dropdown-item">Verbes irréguliers</a>
                     <a href="revision_positions.html" class="dropdown-item">Positions spatiales</a>
                     </div>
             </div>
