--- a/revision_irregulier_verbes.html
+++ b/revision_irregulier_verbes.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Révision Verbes Irréguliers (NL)</title>
+    <title>Révision Verbes Irréguliers (NL).</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <style>
