Ajout exercice irrgulier complet.

--- a/revision_irregulier_verbes.html
+++ b/revision_irregulier_verbes.html
@@ -465,7 +465,7 @@
         </div>
 
         <!-- ÉCRAN DU QUIZ -->
-        <div class="quiz-screen" id="quizScreen">
+        <div class="quiz-screen hidden" id="quizScreen">
             <div class="quiz-header">
                 <div class="quiz-title">Quel est la bonne réponse ?</div>
                 <div class="progress-bar">
@@ -495,7 +495,7 @@
         </div>
 
         <!-- ÉCRAN FINAL -->
-        <div class="end-screen" id="endScreen">
+        <div class="end-screen hidden" id="endScreen">
             <div class="score-emoji" id="scoreEmoji">🎉</div>
             <div class="score-text" id="scoreText">Bravo!</div>
             <div class="score-percentage" id="scorePercentage">10/10 (100%)</div>
