Ajouter regulier.json et exercices.

--- a/index.html
+++ b/index.html
@@ -537,6 +537,7 @@
                     <a href="revision_heures.html" class="dropdown-item">Révision heures</a>
                     <a href="revision_vocabulaire.html" class="dropdown-item">Révision vocabulaire</a>
                     <a href="revision_irregulier_verbes.html" class="dropdown-item">Verbes irréguliers</a>
+                    <a href="revision_regulier_verbes.html" class="dropdown-item">Verbes réguliers</a>
                     <a href="revision_positions.html" class="dropdown-item">Positions spatiales</a>
                     </div>
             </div>
